--- a/CookMania/Info.plist
+++ b/CookMania/Info.plist
@@ -2,10 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSCameraUsageDescription</key>
-    <string>This app requires access to camera</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>This app requires access to photo library</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to photo library</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
